--- a/.github/workflows/build-and-push.yaml
+++ b/.github/workflows/build-and-push.yaml
@@ -15,6 +15,11 @@ on:
             platform:
                 required: false 
                 type: string
+        secrets:
+            DOCKERHUB_USERNAME:
+                required: true
+            DOCKERHUB_TOKEN:
+                required: true
 
 jobs:
     explode-variants:
@@ -38,13 +43,19 @@ jobs:
               uses: docker/setup-buildx-action@v3
               with:
                 driver-opts: network=host
+
+            - name: Login to Docker Hub
+              uses: docker/login-action@v3
+              with:
+                username: ${{ secrets.DOCKERHUB_USERNAME }}
+                password: ${{ secrets.DOCKERHUB_TOKEN }}
             
             - name: Build and push to local registry
               uses: docker/build-push-action@v6
               with:
                 push: true
                 platforms: linux/${{ matrix.platform }}
-                tags: localhost:5000/${{ inputs.imageName }}:${{ format('{0}-{1}-{2}', matrix.variant, matrix.version, matrix.platform) }}
+                tags: lscsde/${{ inputs.imageName }}:${{ format('{0}-{1}-{2}', matrix.variant, matrix.version, matrix.platform) }}
                 build-args: |
                     VARIANT=${{ matrix.variant }}
                     VERSION=${{ matrix.version }}
