--- a/.github/workflows/image-variants-manifest.yaml
+++ b/.github/workflows/image-variants-manifest.yaml
@@ -7,13 +7,16 @@ jobs:
     #     with:
     #         variant: hades
     #         version: '["v1.14.0","v1.13.1"]'
+    # secrets: inherit
     darwin:
         uses: ./.github/workflows/build-and-push.yaml
         with:
             variant: darwin
             version: '["v1.3.1"]'
+        secrets: inherit
     # latest: "v1.4.0",
     #     uses: ./.github/workflows/image-variants-explode.yml
     #     with:
     #         variant: all
     #         version: '["latest"]'
+    # secrets: inherit
