--- a/Dockerfile.hades
+++ b/Dockerfile.hades
@@ -15,7 +15,7 @@ USER root
 ENV VARIANT=${VARIANT}
 ENV VERSION=${VERSION}
 
-RUN R -e "install.packages('remotes', dependencies=TRUE, repos='https://cloud.r-project.org/')" && \
-    R -e "remotes::install_github('ohdsi/Hades@${VERSION}')"
+RUN R -e "install.packages('remotes', repos='https://cloud.r-project.org/')" && \
+    R -e "remotes::install_github('ohdsi/Hades@${VERSION}', dependencies = TRUE)"
    
 USER ${NB_UID}
