--- a/Dockerfile.darwin
+++ b/Dockerfile.darwin
@@ -2,21 +2,18 @@ ARG BASE_IMAGE_NAME=lscsde/docker-datascience-jupyter-omop
 ARG BASE_IMAGE_TAG=base-v1
 ARG PLATFORM
 
-FROM ${BASE_IMAGE_NAME}:${BASE_IMAGE_TAG}-${PLATFORM}
-
+FROM ${BASE_IMAGE_NAME}:${BASE_IMAGE_TAG}:${PLATFORM}
 
 ARG VARIANT
 ARG VERSION
 
 SHELL ["/bin/bash", "-o", "pipefail", "-c"]
 
-USER root
-
 # Install OMOP R Packages
 ENV VARIANT=${VARIANT}
 ENV VERSION=${VERSION}
 
-RUN R -e "install.packages('remotes', dependencies=TRUE, repos='https://cloud.r-project.org/')" && \
-    R -e "remotes::install_github('darwin-eu/CDMConnector@${VERSION}')"
+RUN R -e "install.packages('remotes', repos='https://cloud.r-project.org/')" && \
+    R -e "remotes::install_github('darwin-eu/CDMConnector@${VERSION}', dependencies = TRUE)"
 
 USER ${NB_UID}
