--- a/Dockerfile.darwin
+++ b/Dockerfile.darwin
@@ -2,7 +2,7 @@ ARG BASE_IMAGE_NAME=lscsde/docker-datascience-jupyter-omop
 ARG BASE_IMAGE_TAG=base-v1
 ARG PLATFORM
 
-FROM ${BASE_IMAGE_NAME}:${BASE_IMAGE_TAG}:${PLATFORM}
+FROM ${BASE_IMAGE_NAME}:${BASE_IMAGE_TAG}-${PLATFORM}
 
 ARG VARIANT
 ARG VERSION
