--- a/.github/workflows/build-and-push.yaml
+++ b/.github/workflows/build-and-push.yaml
@@ -34,7 +34,7 @@ jobs:
             matrix:
                   variant: ["${{ inputs.variant }}"]
                   version: ${{ fromJSON(inputs.version) }}
-                  platform: ["arm64"]
+                  platform: ["amd64"]
         steps:
             - name: Set up QEMU
               uses: docker/setup-qemu-action@v3
