--- a/.github/workflows/image-variants-manifest.yaml
+++ b/.github/workflows/image-variants-manifest.yaml
@@ -10,7 +10,7 @@ jobs:
     #         version: '["v1"]'
     #     secrets: inherit
     # hades:
-    #     uses: ./.github/workflows/image-variants-explode.yml
+    #     uses: ./.github/workflows/build-and-push.yaml
     #     with:
     #         variant: hades
     #         version: '["v1.14.0","v1.13.1"]'
@@ -19,11 +19,11 @@ jobs:
         uses: ./.github/workflows/build-and-push.yaml
         with:
             variant: darwin
-            version: '["v1.3.1"]'
+            version: '["v1.4.0","v1.3.1"]'
         secrets: inherit
-    # latest: "v1.4.0",
-    #     uses: ./.github/workflows/image-variants-explode.yml
-    #     with:
-    #         variant: all
-    #         version: '["latest"]'
-    # secrets: inherit
+    latest:
+        uses: ./.github/workflows/build-and-push.yaml
+        with:
+            variant: all
+            version: '["latest"]'
+        secrets: inherit
