--- a/Dockerfile.hades
+++ b/Dockerfile.hades
@@ -15,11 +15,13 @@ USER root
 # Install OMOP R Packages
 ENV VARIANT=${VARIANT}
 ENV VERSION=${VERSION}
-ENV PAT_TOKEN=${PAT_TOKEN}
+ENV GITHUB_PAT=${PAT_TOKEN}
 
-RUN echo "GITHUB_PAT=${PAT_TOKEN}" >> /root/.Renviron
+RUN echo "GITHUB_PAT=${GITHUB_PAT}" >> /root/.Renviron
 
-RUN R -e "install.packages(c('usethis', 'remotes'), repos='https://cloud.r-project.org/')" && \
-    R -e "remotes::install_github('ohdsi/Hades@${VERSION}', auth_token = Sys.getenv('PAT_TOKEN'), dependencies = TRUE, build_vignettes = FALSE)"
+RUN R CMD javareconf
+
+RUN R -e "install.packages(c('usethis', 'remotes', 'rJava'), repos='https://cloud.r-project.org/')" && \
+    R -e "remotes::install_github('ohdsi/Hades@${VERSION}', auth_token = Sys.getenv('GITHUB_PAT'), dependencies = TRUE, build_vignettes = FALSE)"
    
 USER ${NB_UID}
