--- a/Dockerfile.all
+++ b/Dockerfile.all
@@ -6,14 +6,21 @@ FROM ${BASE_IMAGE_NAME}:${BASE_IMAGE_TAG}-${PLATFORM}
 
 ARG VARIANT
 ARG VERSION
+ARG PAT_TOKEN
 
 SHELL ["/bin/bash", "-o", "pipefail", "-c"]
 
 USER root
 
+ENV GITHUB_PAT=${PAT_TOKEN}
+
+RUN echo "GITHUB_PAT=${GITHUB_PAT}" >> /root/.Renviron
+
+RUN R CMD javareconf
 # Install OMOP R Packages
 RUN R -e "install.packages('remotes', repos='https://cloud.r-project.org/')" && \
-    R -e "remotes::install_github('ohdsi/Hades@*release', dependencies = TRUE)" && \
-    R -e "remotes::install_github('darwin-eu/CDMConnector@*release}', dependencies = TRUE)"
+    R -e "remotes::install_github('ohdsi/Hades@*release', auth_token = Sys.getenv('GITHUB_PAT'), dependencies = TRUE, build_vignettes = FALSE)" && \
+    R -e "remotes::install_github('darwin-eu/CDMConnector@*release}', auth_token = Sys.getenv('GITHUB_PAT'), dependencies = TRUE, build_vignettes = FALSE)"
    
 USER ${NB_UID}
+
