--- a/Dockerfile.darwin
+++ b/Dockerfile.darwin
@@ -6,15 +6,18 @@ FROM ${BASE_IMAGE_NAME}:${BASE_IMAGE_TAG}-${PLATFORM}
 
 ARG VARIANT
 ARG VERSION
+ARG PAT_TOKEN
 
 SHELL ["/bin/bash", "-o", "pipefail", "-c"]
 
 # Install OMOP R Packages
 ENV VARIANT=${VARIANT}
 ENV VERSION=${VERSION}
+ENV GITHUB_PAT=${PAT_TOKEN}
+
+RUN echo "GITHUB_PAT=${GITHUB_PAT}" >> /root/.Renviron && R CMD javareconf
 
 # https://ropensci.r-universe.dev https://cloud.r-project.org/
-
 RUN R -e "install.packages('remotes', repos='https://cloud.r-project.org/')" && \
     R -e "remotes::install_github('darwin-eu/CDMConnector@${VERSION}', dependencies = TRUE)"
 
