--- a/.github/workflows/image-variants-manifest.yaml
+++ b/.github/workflows/image-variants-manifest.yaml
@@ -3,18 +3,18 @@ on:
     #push:
     workflow_dispatch:
 jobs:
-    # base:
-    #     uses: ./.github/workflows/build-and-push.yaml
-    #     with:
-    #         variant: base
-    #         version: '["v1"]'
-    #     secrets: inherit
-    hades:
+    base:
         uses: ./.github/workflows/build-and-push.yaml
         with:
-            variant: hades
-            version: '["v1.14.0"]'
+            variant: base
+            version: '["v1"]'
         secrets: inherit
+    # hades:
+    #     uses: ./.github/workflows/build-and-push.yaml
+    #     with:
+    #         variant: hades
+    #         version: '["v1.14.0"]'
+    #     secrets: inherit
     # darwin: ,"v1.13.1"
     #     uses: ./.github/workflows/build-and-push.yaml
     #     with:
