--- a/.github/workflows/image-variants-manifest.yaml
+++ b/.github/workflows/image-variants-manifest.yaml
@@ -16,13 +16,13 @@ jobs:
     #         version: '["v1.14.0","v1.13.1"]'
     #     needs: base
     #     secrets: inherit
-    darwin:
-        uses: ./.github/workflows/build-and-push.yaml
-        with:
-            variant: darwin
-            version: '["v1.4.0","v1.3.1"]'
-        needs: base
-        secrets: inherit
+    # darwin:
+    #     uses: ./.github/workflows/build-and-push.yaml
+    #     with:
+    #         variant: darwin
+    #         version: '["v1.4.0","v1.3.1"]'
+    #     needs: base
+    #     secrets: inherit
     latest:
         uses: ./.github/workflows/build-and-push.yaml
         with:
