--- a/.github/workflows/build-and-push.yaml
+++ b/.github/workflows/build-and-push.yaml
@@ -25,17 +25,17 @@ on:
 jobs:
     buildandpush:
         runs-on: ubuntu-latest
-        services:
-            registry:
-              image: registry:2
-              ports:
-                - 5000:5000
+        #services:
+        #    registry:
+        #      image: registry:2
+        #      ports:
+        #        - 5000:5000
         strategy:
             fail-fast: false
             matrix:
                   variant: ["${{ inputs.variant }}"]
                   version: ${{ fromJSON(inputs.version) }}
-                  platform: ["amd64"]
+                  platform: ["amd64", "arm64"]
         steps:
             - name: Set up QEMU
               uses: docker/setup-qemu-action@v3
