--- a/.github/workflows/image-variants-manifest.yaml
+++ b/.github/workflows/image-variants-manifest.yaml
@@ -9,20 +9,20 @@ jobs:
             variant: base
             version: '["v1"]'
         secrets: inherit
-    # hades:
-    #     uses: ./.github/workflows/build-and-push.yaml
-    #     with:
-    #         variant: hades
-    #         version: '["v1.14.0","v1.13.1"]'
-    #     needs: base
-    #     secrets: inherit
-    # darwin:
-    #     uses: ./.github/workflows/build-and-push.yaml
-    #     with:
-    #         variant: darwin
-    #         version: '["v1.4.0","v1.3.1"]'
-    #     needs: base
-    #     secrets: inherit
+    hades:
+        uses: ./.github/workflows/build-and-push.yaml
+        with:
+            variant: hades
+            version: '["v1.14.0","v1.13.1"]'
+        needs: base
+        secrets: inherit
+    darwin:
+        uses: ./.github/workflows/build-and-push.yaml
+        with:
+            variant: darwin
+            version: '["v1.4.0","v1.3.1"]'
+        needs: base
+        secrets: inherit
     latest:
         uses: ./.github/workflows/build-and-push.yaml
         with:
