test macos runner performance

--- a/.github/workflows/build-and-push.yaml
+++ b/.github/workflows/build-and-push.yaml
@@ -24,7 +24,7 @@ on:
                 required: true
 jobs:
     buildandpush:
-        runs-on: ubuntu-latest
+        runs-on: macos-latest
         #services:
         #    registry:
         #      image: registry:2
@@ -35,7 +35,7 @@ jobs:
             matrix:
                   variant: ["${{ inputs.variant }}"]
                   version: ${{ fromJSON(inputs.version) }}
-                  platform: ["amd64", "arm64"]
+                  platform: ["arm64"]
         steps:
             - name: Set up QEMU
               uses: docker/setup-qemu-action@v3
