--- a/.github/workflows/build-and-push.yaml
+++ b/.github/workflows/build-and-push.yaml
@@ -39,7 +39,8 @@ jobs:
         steps:
             - name: Set up QEMU
               uses: docker/setup-qemu-action@v3
-            
+              with:
+                platforms: arm64
             - name: Set up Docker Buildx
               uses: docker/setup-buildx-action@v3
               with:
