--- a/.github/workflows/build-and-push.yaml
+++ b/.github/workflows/build-and-push.yaml
@@ -40,7 +40,7 @@ jobs:
             - name: Set up QEMU
               uses: docker/setup-qemu-action@v3
               with:
-                platforms: arm64
+                platforms: linux/${{ matrix.platform }}
             - name: Set up Docker Buildx
               uses: docker/setup-buildx-action@v3
               with:
