--- a/.github/workflows/build-and-push.yaml
+++ b/.github/workflows/build-and-push.yaml
@@ -36,16 +36,11 @@ jobs:
                   variant: ["${{ inputs.variant }}"]
                   version: ${{ fromJSON(inputs.version) }}
                   platform: ["arm64"]
-        steps:
-            - name: Install Docker
-              run: |
-               brew install --cask docker 
-               colima start
-             
-            # - name: Set up QEMU
-            #   uses: docker/setup-qemu-action@v3
-            #   with:
-            #     platforms: linux/${{ matrix.platform }}
+        steps:             
+            - name: Set up QEMU
+              uses: docker/setup-qemu-action@v3
+              with:
+                platforms: linux/${{ matrix.platform }}
             - name: Set up Docker Buildx
               uses: docker/setup-buildx-action@v3
               with:
@@ -61,6 +56,8 @@ jobs:
               uses: docker/build-push-action@v6
               with:
                 push: true
+                cache-from: type=gha
+                cache-to: type=gha,mode=max
                 platforms: linux/${{ matrix.platform }}
                 tags: lscsde/${{ inputs.imageName }}:${{ format('{0}-{1}-{2}', matrix.variant, matrix.version, matrix.platform) }}
                 file: ./Dockerfile.${{ matrix.variant }}
