--- a/.github/workflows/build-and-push.yaml
+++ b/.github/workflows/build-and-push.yaml
@@ -24,7 +24,7 @@ on:
                 required: true
 jobs:
     buildandpush:
-        runs-on: macos-latest
+        runs-on: ubuntu-latest
         #services:
         #    registry:
         #      image: registry:2
