--- a/Dockerfile.darwin
+++ b/Dockerfile.darwin
@@ -20,7 +20,7 @@ ENV GITHUB_PAT=${PAT_TOKEN}
 RUN echo "GITHUB_PAT=${GITHUB_PAT}" >> /root/.Renviron && R CMD javareconf
 
 # https://ropensci.r-universe.dev https://cloud.r-project.org/
-RUN R -e "install.packages('remotes', repos='https://cloud.r-project.org/')" && \
-    R -e "remotes::install_github('darwin-eu/CDMConnector@${VERSION}', dependencies = TRUE)"
+RUN R -e "install.packages('remotes', repos=c('https://darwin-eu.r-universe.dev/','https://cloud.r-project.org/'))" && \
+    R -e "remotes::install_github('darwin-eu/CDMConnector@${VERSION}', UPGRADE = FALSE, dependencies = TRUE)"
 
 USER ${NB_UID}
