added jupyter config for databricks CDM connection and other updates

--- a/Dockerfile.base
+++ b/Dockerfile.base
@@ -28,7 +28,8 @@ RUN apt-get install -y --no-install-recommends \
  tigervnc-standalone-server \
  tigervnc-xorg-extension \
  default-jdk \
- default-jre
+ default-jre \
+ unzip
 
 RUN apt-get clean
 RUN rm -rf /var/lib/apt/lists/*
@@ -52,18 +53,4 @@ RUN fix-permissions "${CONDA_DIR}"
 RUN fix-permissions "/home/${NB_USER}"
 
 
-# Install OMOP R Packages
-# ENV VARIANT=${VARIANT}
-# ENV VERSION=${VERSION}
-
-# RUN R -e "install.packages('remotes', dependencies=TRUE, repos='https://cloud.r-project.org/')" && \
-#     if [ "${VARIANT}" = "hades" ]; then \
-#         R -e "remotes::install_github('ohdsi/Hades@${VERSION}')"; \
-#     elif [ "${VARIANT}" = "darwin" ]; then \
-#         R -e "remotes::install_github('darwin-eu/CDMConnector@${VERSION}')"; \
-#     else \
-#         R -e "remotes::install_github('darwin-eu/CDMConnector@*release')" && \
-#         R -e "remotes::install_github('ohdsi/Hades@*release')"; \
-#     fi
-
-USER ${NB_UID}
+USER ${NB_USER}
