--- a/.github/workflows/image-variants-manifest.yaml
+++ b/.github/workflows/image-variants-manifest.yaml
@@ -3,12 +3,12 @@ on:
     #push:
     workflow_dispatch:
 jobs:
-    # base:
-    #     uses: ./.github/workflows/build-and-push.yaml
-    #     with:
-    #         variant: base
-    #         version: '["v1"]'
-    #     secrets: inherit
+    base:
+        uses: ./.github/workflows/build-and-push.yaml
+        with:
+            variant: base
+            version: '["v1"]'
+        secrets: inherit
     # hades:
     #     uses: ./.github/workflows/build-and-push.yaml
     #     with:
@@ -20,8 +20,8 @@ jobs:
         uses: ./.github/workflows/build-and-push.yaml
         with:
             variant: darwin
-            version: '["v1.4.0"]'
-        # needs: base ,"v1.3.1"
+            version: '["v1.4.0", "v1.3.1"]'
+        needs: base
         secrets: inherit
     # latest:
     #     uses: ./.github/workflows/build-and-push.yaml
