--- a/Dockerfile.darwin
+++ b/Dockerfile.darwin
@@ -19,8 +19,17 @@ ENV GITHUB_PAT=${PAT_TOKEN}
 
 RUN echo "GITHUB_PAT=${GITHUB_PAT}" >> /root/.Renviron && R CMD javareconf
 
-# https://ropensci.r-universe.dev https://cloud.r-project.org/
-RUN R -e "install.packages('remotes', repos=c('https://darwin-eu.r-universe.dev/','https://cloud.r-project.org/'))" && \
-    R -e "remotes::install_github('darwin-eu/CDMConnector@${VERSION}', UPGRADE = FALSE, dependencies = TRUE)"
-
-USER ${NB_UID}
+RUN R -e "install.packages(c('remotes','Eunomia','RJDBC'), repos = 'https://cloud.r-project.org')"
+RUN R -e "remotes::install_github('darwin-eu/CDMConnector@${VERSION}', dependencies = TRUE)"
+    
+USER ${NB_USER}
+    
+RUN mkdir /home/${NB_USER}/data && mkdir /home/${NB_USER}/drivers && echo "EUNOMIA_DATA_FOLDER=/home/${NB_USER}/data" >> /home/${NB_USER}/.Renviron
+RUN R -e "usethis::edit_r_environ()"
+    
+RUN wget https://databricks-bi-artifacts.s3.us-east-2.amazonaws.com/simbaspark-drivers/jdbc/2.6.38/DatabricksJDBC42-2.6.38.1068.zip \
+    && mkdir DatabricksJDBC42-2.6.38.1068 && unzip DatabricksJDBC42-2.6.38.1068.zip -d DatabricksJDBC42-2.6.38.1068 && rm DatabricksJDBC42-2.6.38.1068.zip \
+    && mv DatabricksJDBC42-2.6.38.1068/DatabricksJDBC42.jar /home/${NB_USER}/drivers/ \
+    && rm -r DatabricksJDBC42-2.6.38.1068
+    
+COPY omop_tests.ipynb /home/${NB_USER}/omop_tests.ipynb
