Corrected to include reverse dependency packages for darwin

--- a/Dockerfile.darwin
+++ b/Dockerfile.darwin
@@ -19,7 +19,14 @@ ENV GITHUB_PAT=${PAT_TOKEN}
 
 RUN echo "GITHUB_PAT=${GITHUB_PAT}" >> /root/.Renviron && R CMD javareconf
 
-RUN R -e "install.packages(c('remotes','Eunomia','RJDBC'), repos = 'https://cloud.r-project.org')"
+RUN R -e "install.packages(c('remotes','Eunomia','RJDBC','tools'), repos = 'https://cloud.r-project.org')"
+RUN R -e "r = getOption('repos'); \
+	  r['CRAN'] = 'http://cloud.r-project.org'; \
+	  options(repos = r); \
+	  rev_deps <- tools::package_dependencies('CDMConnector', reverse = TRUE, which = 'all')[[1]]; \
+          if (length(rev_deps) > 0) { \
+            install.packages(rev_deps, dependencies = TRUE, repos = 'https://cloud.r-project.org'); \
+          }"
 RUN R -e "remotes::install_github('darwin-eu/CDMConnector@${VERSION}', dependencies = TRUE)"
     
 USER ${NB_USER}
