--- a/.github/workflows/image-variants-manifest.yaml
+++ b/.github/workflows/image-variants-manifest.yaml
@@ -20,7 +20,7 @@ jobs:
         uses: ./.github/workflows/build-and-push.yaml
         with:
             variant: darwin
-            version: '["v1.4.0", "v1.3.1"]'
+            version: '["v1.4.0"]' #"v1.3.1"
         needs: base
         secrets: inherit
     # latest:
