--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -6,6 +6,12 @@ on:
                 required: false
                 type: string
                 default: '[{"KEY":"VALUE"}]'
+            tagPrefix:
+                required: false
+                type: string
+            tag:
+                required: true
+                type: string
 jobs:
     buildpush:
         runs-on: ubuntu-latest
@@ -22,19 +28,36 @@ jobs:
                 echo "build_args<<EOF" >> $GITHUB_OUTPUT
                 cat build_args.txt >> $GITHUB_OUTPUT
                 echo "EOF" >> $GITHUB_OUTPUT
-                
-            - name: Build and push to registry
-              uses: docker/build-push-action@v6
+            
+            - name: Modify Tag if tagPrefix is not empty
+              id: revised_tag
               env:
-                JSON_ARGS: true
-              with:
-               push: false
-               tags: lscsde/xxx
-               file: ./Dockerfile.darwin
-               build-args: |
-                <<EOF
-                 ${{ steps.parse_build_args.outputs.build_args }}
-                EOF
+                tag: ${{ inputs.tag }}
+                tagPrefix: ${{ inputs.tagPrefix }}
+              run: |
+                echo "$tag"
+                echo "$tagPrefix"
+                if [ -n "$tagPrefix" ]; then
+                  tag="${tagPrefix}-${tag}"
+                fi
+                echo "::set-output name=revised_tag::$tag"
+
+            - name: Use the updated tag
+              run: |
+                  echo "Updated: ${{ steps.revised_tag.outputs.revised_tag }}"
+
+            # - name: Build and push to registry
+            #   uses: docker/build-push-action@v6
+            #   env:
+            #     JSON_ARGS: true
+            #   with:
+            #    push: false
+            #    tags: lscsde/xxx
+            #    file: ./Dockerfile.darwin
+            #    build-args: |
+            #     <<EOF
+            #      ${{ steps.parse_build_args.outputs.build_args }}
+            #     EOF
 
 #   job1:
 #     runs-on: ubuntu-latest
