test target platform arch

--- a/.github/workflows/image-variants-manifest.yaml
+++ b/.github/workflows/image-variants-manifest.yaml
@@ -12,8 +12,7 @@ jobs:
             tagPrefix: base
             buildArgs: '[{
                             "VARIANT": "base",
-                            "VERSION": "v1",
-                            "PLATFORM": "amd64"
+                            "VERSION": "v1"
                         }]'
 
         secrets: inherit
