--- a/.github/workflows/image-variants-manifest.yaml
+++ b/.github/workflows/image-variants-manifest.yaml
@@ -7,11 +7,10 @@ jobs:
         uses: lsc-sde/lsc-sde/.github/workflows/docker-build.yaml@mph/integrate-omop   #just call docker-build.yaml
         with:
             imageName: datascience-jupyter-omop
-            platforms: '[ "arm64" ]' #"amd64", 
+            platforms: '[ "amd64" ]' #"arm64", 
             tag: 'v1'
-            tagPrefix: base
+            targets: '[ "base" ]'
             buildArgs: '[{
-                            "VARIANT": "base",
                             "VERSION": "v1"
                         }]'
 
