--- a/.github/workflows/image-variants-manifest.yaml
+++ b/.github/workflows/image-variants-manifest.yaml
@@ -9,10 +9,10 @@ jobs:
             imageName: datascience-jupyter-omop
             platforms: '[ "amd64", "arm64" ]' #"arm64", 
             tag: '1.0.1'
-            targets: '[ "darwin" ]'
-            buildArgs: '[{
-                            "TARGET_VERSION": "v1"
-                        }]'
+            # targets: '[ "darwin" ]'
+            # buildArgs: '[{
+            #                 "TARGET_VERSION": "v1"
+            #             }]'
 
         secrets: inherit
     # darwin:
