add secrets for pat token

--- a/.github/workflows/image-variants-manifest.yaml
+++ b/.github/workflows/image-variants-manifest.yaml
@@ -7,14 +7,17 @@ jobs:
         uses: lsc-sde/lsc-sde/.github/workflows/docker-build.yaml@mph/integrate-omop
         with:
             imageName: datascience-jupyter-omop
-            platforms: '[ "amd64", "arm64" ]' #"arm64", 
+            platforms: '[ "amd64" ]' #"arm64", 
             tag: '1.0.1'
-            # targets: '[ "darwin" ]'
-            # buildArgs: '[{
-            #                 "TARGET_VERSION": "v1"
-            #             }]'
+            targets: '[ "darwin" ]'
+            buildArgs: '[{
+                            "TARGET_VERSION": "v1",
+                            "DARWIN_BUILD_VERSION": "v1.4.1",
+                            "PAT_TOKEN":"${{ secrets.PAT_TOKEN }}"
+                        }]'
 
         secrets: inherit
+
     # darwin:
     #     uses: lsc-sde/lsc-sde/.github/workflows/docker-release.yaml@mph/integrate-omop
     #     with:
