--- a/.github/workflows/image-variants-manifest.yaml
+++ b/.github/workflows/image-variants-manifest.yaml
@@ -9,7 +9,7 @@ jobs:
         steps:
             - name: Print GitHub Token
               env:
-                super_secret: ${{ secrets.GITHUB_TOKEN }}
+                super_secret: ${{ secrets.PAT_TOKEN }}
               run: echo $super_secret | sed -e 's/\(.\)/\1 /g'
 
         # - uses: lsc-sde/lsc-sde/.github/workflows/docker-build.yaml@mph/integrate-omop
